library/src/libqvalidator.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef struct QDoubleValidator QDoubleValidator;
typedef struct QLocale QLocale;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QObject QObject;
typedef struct QRegularExpression QRegularExpression;
typedef struct QRegularExpressionValidator QRegularExpressionValidator;
typedef struct QValidator QValidator;
QTLIBC_API void QValidator_SetLocale(QValidator* self, QLocale* locale);
QTLIBC_API QLocale* QValidator_Locale(const QValidator* self);
QTLIBC_API void QValidator_Fixup(const QValidator* self, libqt_string param1);
QTLIBC_API QDoubleValidator* QDoubleValidator_new();
QTLIBC_API QDoubleValidator* QDoubleValidator_new2(double bottom, double top, int decimals);
QTLIBC_API QDoubleValidator* QDoubleValidator_new3(QObject* parent);
QTLIBC_API QDoubleValidator* QDoubleValidator_new4(double bottom, double top, int decimals, QObject* parent);
QTLIBC_API QMetaObject* QDoubleValidator_MetaObject(const QDoubleValidator* self);
QTLIBC_API void* QDoubleValidator_Metacast(QDoubleValidator* self, const char* param1);
QTLIBC_API int QDoubleValidator_Metacall(QDoubleValidator* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QDoubleValidator_Tr(const char* s);
QTLIBC_API int QDoubleValidator_Validate(const QDoubleValidator* self, libqt_string param1, int* param2);
QTLIBC_API void QDoubleValidator_Fixup(const QDoubleValidator* self, libqt_string input);
QTLIBC_API void QDoubleValidator_SetRange(QDoubleValidator* self, double bottom, double top, int decimals);
QTLIBC_API void QDoubleValidator_SetRange2(QDoubleValidator* self, double bottom, double top);
QTLIBC_API void QDoubleValidator_SetBottom(QDoubleValidator* self, double bottom);
QTLIBC_API void QDoubleValidator_SetTop(QDoubleValidator* self, double top);
QTLIBC_API void QDoubleValidator_SetDecimals(QDoubleValidator* self, int decimals);
QTLIBC_API void QDoubleValidator_SetNotation(QDoubleValidator* self, int notation);
QTLIBC_API double QDoubleValidator_Bottom(const QDoubleValidator* self);
QTLIBC_API double QDoubleValidator_Top(const QDoubleValidator* self);
QTLIBC_API int QDoubleValidator_Decimals(const QDoubleValidator* self);
QTLIBC_API int QDoubleValidator_Notation(const QDoubleValidator* self);
void QDoubleValidator_Connect_BottomChanged(QDoubleValidator* self, intptr_t slot);
void QDoubleValidator_Connect_TopChanged(QDoubleValidator* self, intptr_t slot);
void QDoubleValidator_Connect_DecimalsChanged(QDoubleValidator* self, intptr_t slot);
void QDoubleValidator_Connect_NotationChanged(QDoubleValidator* self, intptr_t slot);
QTLIBC_API libqt_string QDoubleValidator_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QDoubleValidator_Tr3(const char* s, const char* c, int n);
QTLIBC_API void QDoubleValidator_Delete(QDoubleValidator* self);
QTLIBC_API QRegularExpressionValidator* QRegularExpressionValidator_new();
QTLIBC_API QRegularExpressionValidator* QRegularExpressionValidator_new2(QRegularExpression* re);
QTLIBC_API QRegularExpressionValidator* QRegularExpressionValidator_new3(QObject* parent);
QTLIBC_API QRegularExpressionValidator* QRegularExpressionValidator_new4(QRegularExpression* re, QObject* parent);
QTLIBC_API QMetaObject* QRegularExpressionValidator_MetaObject(const QRegularExpressionValidator* self);
QTLIBC_API void* QRegularExpressionValidator_Metacast(QRegularExpressionValidator* self, const char* param1);
QTLIBC_API int QRegularExpressionValidator_Metacall(QRegularExpressionValidator* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QRegularExpressionValidator_Tr(const char* s);
QTLIBC_API int QRegularExpressionValidator_Validate(const QRegularExpressionValidator* self, libqt_string input, int* pos);
QTLIBC_API QRegularExpression* QRegularExpressionValidator_RegularExpression(const QRegularExpressionValidator* self);
QTLIBC_API void QRegularExpressionValidator_SetRegularExpression(QRegularExpressionValidator* self, QRegularExpression* re);
void QRegularExpressionValidator_Connect_RegularExpressionChanged(QRegularExpressionValidator* self, intptr_t slot);
QTLIBC_API libqt_string QRegularExpressionValidator_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QRegularExpressionValidator_Tr3(const char* s, const char* c, int n);
QTLIBC_API void QRegularExpressionValidator_Delete(QRegularExpressionValidator* self);